word-wrap fix in results.css

--- a/mystatic/results/results.css
+++ b/mystatic/results/results.css
@@ -28,7 +28,7 @@
 }
 
 .show-data > .title{
-  margin-left: 0.5rem;
+  /* width: 100%; */
 }
 .hidden-field-data{
   display: all 0.5s linear;
@@ -38,8 +38,9 @@
   display: none;
 } */
 .title{
+  margin-left: 0.5rem;
   position: relative;
-  width: 30rem;
+  width: 100%;
 }
 .video-options{
   position: absolute;
@@ -56,11 +57,6 @@
   float: right;
 }
 
-/* disable next and prev buttons by adding disabled attribute to it */
-a[disabled], a[disabled]:hover {
-   pointer-events: none;
-   /* color: #e1e1e1; */
-}
 
 /* Small Screens  */
 @media only screen and (max-width: 576px) {
@@ -75,7 +71,7 @@ a[disabled], a[disabled]:hover {
   margin: 0;
 }
 .video-field-data{
-  word-break: break-all;
+  /* word-break: break-all; */
   word-wrap: break-word;
 }
 
@@ -95,5 +91,11 @@ a[disabled], a[disabled]:hover {
   /* min-width: em; */
 }
 
+}
 
+
+/* disable next and prev buttons by adding disabled attribute to it */
+a[disabled], a[disabled]:hover {
+  pointer-events: none;
+  /* color: #e1e1e1; */
 }
